// Copyright (c) 2024 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.daml.ledger.api.v1;

import "com/daml/ledger/api/v1/commands.proto";
import "com/daml/ledger/api/v1/transaction.proto";
import "google/protobuf/empty.proto";

option java_outer_classname = "CommandServiceOuterClass";
option java_package = "com.daml.ledger.api.v1";
option csharp_namespace = "Com.Daml.Ledger.Api.V1";

// Command Service is able to correlate submitted commands with completion data, identify timeouts, and return contextual
// information with each tracking result. This supports the implementation of stateless clients.
//
// Note that submitted commands generally produce completion events as well, even in case a command gets rejected.
// For example, the participant MAY choose to produce a completion event for a rejection of a duplicate command.
service CommandService {
  // Submits a single composite command and waits for its result.
  // Propagates the gRPC error of failed submissions including Daml interpretation errors.
  rpc SubmitAndWait (SubmitAndWaitRequest) returns (google.protobuf.Empty);

  // Submits a single composite command, waits for its result, and returns the transaction id.
  // Propagates the gRPC error of failed submissions including Daml interpretation errors.
  rpc SubmitAndWaitForTransactionId (SubmitAndWaitRequest) returns (SubmitAndWaitForTransactionIdResponse);

  // Submits a single composite command, waits for its result, and returns the transaction.
  // Propagates the gRPC error of failed submissions including Daml interpretation errors.
  rpc SubmitAndWaitForTransaction (SubmitAndWaitRequest) returns (SubmitAndWaitForTransactionResponse);

  // Submits a single composite command, waits for its result, and returns the transaction tree.
  // Propagates the gRPC error of failed submissions including Daml interpretation errors.
  rpc SubmitAndWaitForTransactionTree (SubmitAndWaitRequest) returns (SubmitAndWaitForTransactionTreeResponse);
}

// These commands are atomic, and will become transactions.
message SubmitAndWaitRequest {
  // The commands to be submitted.
  // Required
  Commands commands = 1;
}

message SubmitAndWaitForTransactionIdResponse {
  // The id of the transaction that resulted from the submitted command.
  // Must be a valid LedgerString (as described in ``value.proto``).
  // Required
  string transaction_id = 1;
  // The format of this field is described in ``ledger_offset.proto``.
  // Optional
  string completion_offset = 2;
}

message SubmitAndWaitForTransactionResponse {
  // The flat transaction that resulted from the submitted command.
  // Required
  Transaction transaction = 1;
  // The format of this field is described in ``ledger_offset.proto``.
  // Optional
  string completion_offset = 2;
}

message SubmitAndWaitForTransactionTreeResponse {
  // The transaction tree that resulted from the submitted command.
  // Required
  TransactionTree transaction = 1;
  // The format of this field is described in ``ledger_offset.proto``.
  // Optional
  string completion_offset = 2;
}
